testdata/baselines/reference/submodule/conformance/moduleExportWithExportPropertyAssignment4.errors.txt
a.js(4,17): error TS2339: Property 'toFixed' does not exist on type '"string"'.
a.js(5,16): error TS2339: Property 'toFixed' does not exist on type '"string"'.
mod1.js(6,1): error TS2741: Property 'justProperty' is missing in type '{ (): void; justExport: number; bothBefore: number; bothAfter: number; }' but required in type 'typeof import("mod1")'.


==== a.js (2 errors) ====
    /// <reference path='./requires.d.ts' />
    var mod1 = require('./mod1')
    mod1.justExport.toFixed()
    mod1.bothBefore.toFixed() // error
                    ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type '"string"'.
    mod1.bothAfter.toFixed()
                   ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type '"string"'.
    mod1.justProperty.length
    
==== requires.d.ts (0 errors) ====
    declare var module: { exports: any };
    declare function require(name: string): any;
==== mod1.js (1 errors) ====
    /// <reference path='./requires.d.ts' />
    module.exports.bothBefore = 'string'
    A.justExport = 4
    A.bothBefore = 2
    A.bothAfter = 3
    module.exports = A
    ~~~~~~~~~~~~~~
!!! error TS2741: Property 'justProperty' is missing in type '{ (): void; justExport: number; bothBefore: number; bothAfter: number; }' but required in type 'typeof import("mod1")'.
!!! related TS2728 mod1.js:11:1: 'justProperty' is declared here.
    function A() {
        this.p = 1
    }
    module.exports.bothAfter = 'string'
    module.exports.justProperty = 'string'
    